Refactor SchedulerHandoffBenchmark to improve event loop thread handling and request processing